# vsomeip

vsomeip_project/: CMakeLists.txt  engine.cpp  engine.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  service.cpp  service.h  service.json  vsomeipinitializer.cpp  vsomeipinitializer.h
vsomeip_project_client/: CMakeLists.txt  client.cpp  client.h  client.json  engine.cpp  engine.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
